# turing_machine

./: CMakeLists.txt  README.md
include/: inputController.h  tapeController.h  transitionController.h  utils.h
src/: inputController.c  main.c  tapeController.c  transitionController.c  utils.c
test_machines/binary_add/: rules.txt
test_machines/reverse_str/: rules.txt
